# uav_ros_control

./: CMakeLists.txt  README.md  package.xml  plugins.xml
.ci/: ci_before_install.sh
config/control/: mpc_config.yaml
include/uav_ros_control/control/: CascadePID.hpp  ControlBase.hpp  ModelPredictiveControl.hpp  PID.hpp  controller_interface.hpp  cvx_wrapper.hpp
include/uav_ros_control/reference/: CarrotReference.hpp  GeoFence.hpp  Global2Local.hpp
include/uav_ros_control/util/: AutomaticTakeoff.hpp  uav_util.hpp
launch/: control_manager.launch  pid_carrot.launch  pid_carrot_carto.launch  pid_carrot_geo_fence.launch  pid_carrot_optitrack.launch  position_control.launch
nodes/control/: ControlManagerNode.cpp  PositionControlNode_px4.cpp
src/control/: CascadePID.cpp  ControlBase.cpp  DistanceController.cpp  ModelPredictiveControl.cpp  PID.cpp  cvx_wrapper.cpp
src/control/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
src/reference/: CarrotReference.cpp  JoyControlInput.cpp
src/util/: AutomaticTakeoff.cpp  uav_util.cpp
startup/kopterworx_one_flying_mpcontrol/: session.yml
startup/kopterworx_one_flying_mpcontrol/custom_config/: mpc_config.yaml  mpc_debug.perspective
