<?xml version="1.0"?>
<package>
  <name>uav_ros_control</name>
  <version>0.0.0</version>
  <description>Control algorithms used for "uav_ros_stack" package</description>
  <maintainer email="lovro.markovic@fer.hr">Lovro Markovic</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>uav_ros_msgs</build_depend>
  <build_depend>geographiclib</build_depend>
  <build_depend>geographiclib-tools</build_depend>
  <build_depend>mavros</build_depend>

  <run_depend>geographiclib</run_depend>
  <run_depend>geographiclib-tools</run_depend>
  <run_depend>uav_ros_msgs</run_depend>
  <run_depend>mavros</run_depend>
  
</package>
