<?xml version="1.0"?>
<package>
  <name>uav_ros_control</name>
  <version>0.0.0</version>
  <description>Control algorithms used for "uav_ros_stack" package</description>
  <maintainer email="lovro.markovic@fer.hr">Lovro Markovic</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>uav_ros_msgs</build_depend>
  <build_depend>uav_ros_lib</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <run_depend>uav_ros_msgs</run_depend>
  <run_depend>uav_ros_lib</run_depend>
  <run_depend>mavros_msgs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <uav_ros_control plugin="${prefix}/plugins.xml"/>
    
  </export>

</package>
